# LabToolkit

./: .gitignore  .travis.yml  AUTHORS.rst  AboutPython.tex  AboutRFC2119.tex  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  ModusOperandi.tex  README.md  README.rst  RF Immunity Test System.tex  abstract.tex  clean-make.sh  clean.sh  content.tex  glossarys.tex  header.tex  logbook.tex  make.sh  project.tex  py_x.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  splitsegment.tex  table_calibrationdata.tex  table_decisionmaking.tex  table_testconfigs.tex  terminology.tex  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
Texdocs/: 2017 Project.txt  AboutGit.tex  AboutPython.tex  Fragments.tex  RF Immunity Test System.tex  SWOT_Analysis.tex  clean.sh  content.tex  make.sh  py_getpowermeterdata.py  py_powermetercalcs.py  table_testconfigs_calibration.tex  upload.sh
docs/: Makefile  conf.py  engineering_project.rst  index.rst  installation.rst  labtoolkit.rst  make.bat  modules.rst  pages.rst  requirements.txt  usage.rst
engineering_project/: AudioAnalyser.py  CF_align.py  DigitalMultimeter.py  ETC.py  ElectronicAttenuator.py  ElectronicLoad.py  EnviromentalChamber.py  FieldStrength.py  FrequencyCounter.py  MeasurePwr.py  ModulationMeter.py  Osciliscope.py  Peek_Sweep-Measure.py  Positioner.py  PowerMeter.py  REPL.py  RFPy.py  SourceAC.py  SourceDC.py  SpectrumAnalyser.py  SurgeGenerator.py  Sweep-Measure.py  WaveformGenerator.py  __init__.py  __main__.py  clipboard.py  estimatedtime.py  filters.py  gitrevision.py  immunity.py  (+5 more)
(+306 files in other folders)
